--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DemoMap.DemoMap
-GameDefaultMap=/Game/Maps/DemoMap.DemoMap
+EditorStartupMap=/Game/Daniel/Level/lvl_Daniel.lvl_Daniel
+GameDefaultMap=/Game/Daniel/Level/lvl_Daniel.lvl_Daniel
 GlobalDefaultGameMode=/Game/GameFiles/3P_GameMode.3P_GameMode_C
 GameInstanceClass=/Game/GameFiles/3p_GameInstance.3P_GameInstance_C
 
@@ -114,3 +114,7 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
